[gd_scene load_steps=7 format=3 uid="uid://c5b2gli81j3dx"]

[ext_resource type="Script" uid="uid://c5lkyvg37x8s7" path="res://Scenes/GUI/gui.gd" id="1_psa72"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psa72"]
bg_color = Color(0.690215, 1.05527e-05, 5.39064e-06, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm40n"]
resource_local_to_scene = true
bg_color = Color(0.293751, 0.773117, 0.502754, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.127239, 0.364682, 0.144632, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyhc4"]
resource_local_to_scene = true
bg_color = Color(0.293751, 0.773117, 0.502754, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.127239, 0.364682, 0.144632, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4lgj"]
resource_local_to_scene = true
bg_color = Color(0.293751, 0.773117, 0.502754, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.127239, 0.364682, 0.144632, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtdjp"]
resource_local_to_scene = true
bg_color = Color(0.293751, 0.773117, 0.502754, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.127239, 0.364682, 0.144632, 1)

[node name="GUI" type="Node2D"]
script = ExtResource("1_psa72")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Gamble" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 466.0
offset_top = 25.0
offset_right = 640.0
offset_bottom = 54.0
text = "GAMBLE"

[node name="LifebarP1" type="Node2D" parent="CanvasLayer"]

[node name="LifebarP1" type="ProgressBar" parent="CanvasLayer/LifebarP1"]
unique_name_in_owner = true
offset_left = 25.0
offset_top = 19.0
offset_right = 417.0
offset_bottom = 50.0
theme_override_styles/background = SubResource("StyleBoxFlat_psa72")
theme_override_styles/fill = SubResource("StyleBoxFlat_gm40n")

[node name="LifebarP3" type="Node2D" parent="CanvasLayer"]
position = Vector2(0, 44)

[node name="LifebarP3" type="ProgressBar" parent="CanvasLayer/LifebarP3"]
unique_name_in_owner = true
offset_left = 25.0
offset_top = 19.0
offset_right = 417.0
offset_bottom = 50.0
theme_override_styles/background = SubResource("StyleBoxFlat_psa72")
theme_override_styles/fill = SubResource("StyleBoxFlat_jyhc4")

[node name="LifebarP2" type="Node2D" parent="CanvasLayer"]
position = Vector2(705, 9)

[node name="LifebarP2" type="ProgressBar" parent="CanvasLayer/LifebarP2"]
unique_name_in_owner = true
offset_left = 25.0
offset_top = 19.0
offset_right = 417.0
offset_bottom = 50.0
theme_override_styles/background = SubResource("StyleBoxFlat_psa72")
theme_override_styles/fill = SubResource("StyleBoxFlat_b4lgj")
fill_mode = 1

[node name="LifebarP4" type="Node2D" parent="CanvasLayer"]
position = Vector2(705, 48)

[node name="LifebarP4" type="ProgressBar" parent="CanvasLayer/LifebarP4"]
unique_name_in_owner = true
offset_left = 25.0
offset_top = 19.0
offset_right = 417.0
offset_bottom = 50.0
theme_override_styles/background = SubResource("StyleBoxFlat_psa72")
theme_override_styles/fill = SubResource("StyleBoxFlat_jtdjp")
fill_mode = 1
